2009-08-05  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygheap.h (cygheap_debug::endh): Delete.
	* debug.cc (lock_debug::acquired): Delete.
	(lock_debug::lock_debug): Simplify.
	(lock_debug::unlock): Ditto.
	(find_handle): Don't set endh here.
	(add_handle): Add new handle to beginning of the list rather than
	trying to maintain an end list pointer.
	(delete_handle): Minor optimization.
	(mark_closed): Make logic clearer.
	(verify_handle): Lock handle list before scanning.
	(setclexec): Ditto.
	(modify_handle): Ditto.
	(newh): Don't lock handle list here.  Assume caller did this.
	(mark_closed): Ditto.
	(close_handle): Remove unneeded #if.
	* dtable.cc (dtable::dup2): Tweak debug output.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (patch_conv::check): Zero path before setting it.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_socket.cc (fhandler_socket::send_internal): Just use wmem
	size if the length exceeds it.
	* net.cc (fdsock): Use 65535 as window size, just like the comment
	says or we run into problems with DuplicateHandle.

	* path.cc (patch_conv::check): Use set_path to set invalid filename.
	* path.h (path_conv::path_conv): Ditto.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (pdrive_buf): Defensively allocate one extra byte.

2009-08-04  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler.h (fhandler_cygdrive:DRVSZ): New enum.
	(pdrive_buf): New place to hold information about cygdrive.
	* fhandler_disk_file.cc (fhandler_cygdrive::set_drives): Store drive
	info in pdrive_buf since get_win32_name() could now be too small to
	hold everything.
	(fhandler_cygdrive::rewinddir): Reset pdrive to pdrive_buf.
	(fhandler_cygdrive::closedir): Ditto.
	* pipe.cc (fhandler_pipe::init): Be more defensive when referencing
	get_win32_name().  Rework logic which made a copy of the POSIX path and
	then never used it.

2009-08-02  Christopher Faylor  <me+cygwin@cgf.cx>
